--- a/src/main.css
+++ b/src/main.css
@@ -3,121 +3,109 @@
     padding: 0;
 }
 
-.title1 {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-    font-size: 50px;
-    width: auto;
+body {
+    top: 0px;
+    left: 0px; 
 }
 
-.back {
-    color: #ffffff;
-    top: 0px;
-    left: 0px;
+#title {
+    font-family: 'Lobster';
+    font-weight: 400;
+    font-size: 60px;
+    font-stretch: 1.4;
+    letter-spacing: 0px;
+    color: #F7F0F0;
+    text-shadow: 0px 3px 6px #636363;
+    opacity: 1;
+}
+
+.container-externo {
+    background: #731AB7 0% 0% no-repeat padding-box;
     max-width: 1920px;
     max-height: 1080px;
-    background: #731AB7 0% 0% no-repeat padding-box;
     border: 1px solid #707070;
     opacity: 1;
-    background: #731AB7;
-    display: flex;
-    justify-content: center;
-    margin-left: 5em;
-    margin-right: 5em;
-
+    color: #F7F0F0;
 }
 
-.corpo { 
-    top: 0px;
-    max-width: 65%;
+.container-interno {
+    margin-left: 15%;
+    margin-right: 15%;
+    max-width: 1172px;
+    height: 100%;
+    background: #5B0993;
+    box-shadow: 0px 3px 6px #00000029;
+    border: 1px solid #707070;
+}
+
+.cabecalho {
+    max-height: 20%;
     width: 100%;
-    background: #551A8B 20% 0% no-repeat padding-box;
-}
-
-.header {
+    display: block;
     text-align: center;
+}
+
+.logoHacker {
+    padding-top: 10px;
+    max-width: 80px;
     width: 100%;
-}
-
-.logoGama {
-    max-width: 300px;
-    width: 100%;
-}
-
-.titles {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-    font-size: 30px;
-}
-
-.sec1 {
-    background: red;
-    width: 100%;
-
-}
-
-.nomes {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-}
-
-.inputsrow {
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
-}
-
-.enter {
-    text-align: center;
-    max-width: 200px;
-    width: 100%;
-
-}
-
-.labels {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
 }
 
 .inputs {
-    max-width: 172px;
-    max-height: 100px;
+    max-width: 50%;
+    max-height: 71px;
     background: none;
     border-radius: 10px;
-    border: 2px solid #F7F7F7;
-    text-align: center;
-    opacity: 1;
-    font-family: 'Roboto', sans-serif;
-}
-
-.itens {
-    font-family: 'Roboto', sans-serif;
+    color: #F7F0F0;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 25px;
-}
-.esquerda {
-    max-width: 20%;
-}
-.direita {
-    max-width: 80%;
+    font-size: 30px;
     text-align: center;
 }
 
-.acomp {
-    border-radius: 10px;
-    cursor: pointer;
-    border-radius: 50%;
+.labels {
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    
 }
 
-.botao {
-    width: 100px;
-    background: white;
-    border-radius: 10px;
-    display: block;
-    margin:auto;
-    color: #551A8B;
+.h3, .h4 {
+    padding-bottom: 10px;
+    font-family: 'Lobster', cursive;
+    letter-spacing: 0px;
+    text-shadow: 0px 3px 6px #636363;
+    opacity: 1;
+}
+
+.qtds {
+    text-align: center;
+    width: 100%;
+    height: auto;
+}
+
+.beers{
+    text-align: center;
+}
+
+#acomp {
+    padding-left: 5%;
+}
+
+#botaoCalcular {
+    color: #5B0993;
+    font-family: 'Lato', sans-serif;
     font-weight: bold;
-    font-family: 'Roboto', sans-serif;
+}
+
+.resultados {
+    border-radius: 10px;
+    background: #707070;
+
+}
+
+.h5 {
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    font-size: 10px;
 }
